--- a/styles/display.module.css
+++ b/styles/display.module.css
@@ -4,56 +4,132 @@
   height: 100vh;
   width: 100%;
   position:relative;
+  z-index: 1;
 }
 
 .infoBox {
   position: absolute;
-  top: 50px;
-  left: 50px;
-  width: 30%;
-  background: rgba(255, 255, 255, 0.5);
+  top: 4rem;
+  left: 4rem;
+  background-color: rgb(82, 81, 81,0.6);
   color: black;
   padding: 10px;
   border-radius: 5px;
   z-index: 5;
   transition:1s all;
-  box-shadow: 1px 1px 10px  white;
+  color: rgb(255, 255, 255,0.5);
+  
 }
+
+.infoBox::before {
+content:"";
+position: absolute;
+left:-2rem;
+top:1rem;
+width: 2rem;
+height: 1rem;
+background-color: rgb(82, 81, 81,0.6);
+  
+}
+
+.infoBox::after {
+  content:"";
+  position: absolute;
+  left:-2rem;
+  bottom:1rem;
+  width: 2rem;
+  height: 1rem;
+  background-color: rgb(82, 81, 81,0.6);
+    
+  }
 
 .infoBox p{
 
   padding:1rem;
 }
 
+.planetFocus
+{
+position: absolute;
+bottom:2rem;
+left:2rem;
+padding: 1rem;
+color: rgb(255, 255, 255,0.5);
+background-color: rgb(82, 81, 81,0.6);
+z-index: 100;
+border-radius: 8;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+}
+
+.planetFocus button
+{
+  color: rgb(255, 255, 255,0.7);
+  padding: 0.3rem;
+  transition: 1s all;
+}
+
+.planetFocus button:hover
+{
+  color: rgb(0, 255, 255,0.7);
+}
+
+.planetFocus::before
+{
+content:"";
+position: absolute;
+top:1rem;
+left:-2.40rem;
+height: 2vh;
+width: 2vw;
+background-color: rgb(82, 81, 81,0.6);
+z-index: 100;
+}
+
+.planetFocus::after
+{
+content:"";
+position: absolute;
+bottom:2rem;
+left:-2.40rem;
+height: 2vh;
+width: 2vw;
+background-color: rgb(82, 81, 81,0.6);
+z-index: 100;
+}
+
 .IconContainer
 {
   position:absolute;
   right: 0;
-  margin: 1rem;
   bottom:0;
-  width: 150px;
-  height: 150px;
-  padding: 10px;
+  width: 20vw;
+  height: 5vh;
   border-radius: 5px;
-  z-index: 5;
-  border:1px solid white;
+  z-index: 50;
   flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-end;
+  align-items: center;
   justify-content: flex-end;
   display: flex;
 }
 
 .IconContainer > div
 {
-  display: block;
-  width: 50%;
-  height: 50%;
+
+ padding: 1rem;
 }
 
 .IconContainer > div > svg
 {
-padding:0.5rem
+ height: 2rem;
+ cursor: pointer;
+transition: 1s all;
+}
+
+.IconContainer > div > svg:hover
+{
+transform: scale(1.2);
 }
 
 
@@ -76,3 +152,146 @@ padding:0.5rem
   font-size: 14px;
   z-index: 100
 }
+
+/*** Contour du canvas **/
+.boxContainer
+{
+
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+}
+
+.boxTopContainer
+{
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 5vh;
+  background-color: rgb(82, 81, 81);
+}
+
+.boxBottomContainer
+{
+  position: absolute;
+  bottom:0;
+  left:0;
+  width: 100%;
+  height: 5vh;
+  background-color: rgb(82, 81, 81);
+
+}
+
+.boxLeftContainer
+{
+  position: absolute;
+  top:5vh;
+  left:0;
+  width: 2vw;
+  height:90vh;
+  background-color: rgb(82, 81, 81);
+}
+
+.boxLeftContainer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -1rem;
+  width: 0;
+  height: 0;
+  border-left: 1rem solid rgb(82, 81, 81);
+  border-bottom: 1rem solid transparent; /* Triangle */
+  z-index: 100;
+}
+
+.boxLeftContainer::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: -1rem;
+  width: 0;
+  height: 0;
+  border-right: 1rem solid transparent;
+  border-bottom: 1rem solid rgb(82, 81, 81); /* Triangle */
+  z-index: 100;
+}
+
+
+.boxRightContainer
+{
+  position: absolute;
+  top:5vh;
+  right:0;
+  width: 2vw;
+  height:90vh;
+  background-color: rgb(82, 81, 81);
+
+}
+
+.boxRightContainer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -1rem;
+  width: 0;
+  height: 0;
+  border-right: 1rem solid rgb(82, 81, 81);
+  border-bottom: 1rem solid transparent; /* Triangle */
+  z-index: 100;
+}
+
+.boxRightContainer::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: -1rem;
+  width: 0;
+  height: 0;
+  border-left: 1rem solid transparent;
+  border-bottom: 1rem solid rgb(82, 81, 81); /* Triangle */
+  z-index: 100;
+}
+
+
+.boxCenterContainer
+{
+  position: absolute;
+  top:5vh;
+  left:2vw;
+  width: 95vw;
+  height: 90vh;
+}
+
+@media (max-width: 750px) { 
+
+
+  .infoBox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    color: black;
+    padding: 0.5rem;
+    border-radius: 0;
+    z-index: 5;
+    transition:1s all;
+    box-shadow: none;
+  }
+  
+  .infoBox p{
+  
+    padding:0.5rem;
+  }
+
+  .IconContainer
+{
+
+  display: none;
+}
+
+ }
