--- a/styles/display.module.css
+++ b/styles/display.module.css
@@ -1,109 +1,103 @@
-.container
-{
-  background-color: black;
+.container {
+
   height: 100vh;
   width: 100%;
-  position:relative;
+  position: relative;
   z-index: 1;
 }
 
 .infoBox {
   position: absolute;
-  top: 4rem;
-  left: 4rem;
-  background-color: rgb(82, 81, 81,0.6);
+  top: 2rem;
+  left: -30rem;
+  width: 50rem;
+  background-color: rgb(255, 255, 255, 0.2);
   color: black;
-  padding: 10px;
-  border-radius: 5px;
-  z-index: 5;
-  transition:1s all;
-  color: rgb(255, 255, 255,0.5);
-  
-}
-
-.infoBox::before {
-content:"";
-position: absolute;
-left:-2rem;
-top:1rem;
-width: 2rem;
-height: 1rem;
-background-color: rgb(82, 81, 81,0.6);
-  
-}
-
-.infoBox::after {
-  content:"";
-  position: absolute;
-  left:-2rem;
-  bottom:1rem;
-  width: 2rem;
-  height: 1rem;
-  background-color: rgb(82, 81, 81,0.6);
-    
-  }
-
-.infoBox p{
-
-  padding:1rem;
-}
-
-.planetFocus
-{
-position: absolute;
-bottom:2rem;
-left:2rem;
-padding: 1rem;
-color: rgb(255, 255, 255,0.5);
-background-color: rgb(82, 81, 81,0.6);
-z-index: 100;
-border-radius: 8;
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-}
-
-.planetFocus button
-{
-  color: rgb(255, 255, 255,0.7);
-  padding: 0.3rem;
+  padding: 1rem;
+  border-radius: 8;
+  z-index: 100;
   transition: 1s all;
+  color: rgb(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
 }
 
-.planetFocus button:hover
-{
-  color: rgb(0, 255, 255,0.7);
+.infoBox p {
+
+  padding: 1rem;
 }
 
-.planetFocus::before
+.infoBoxIcon
 {
-content:"";
-position: absolute;
-top:1rem;
-left:-2.40rem;
-height: 2vh;
-width: 2vw;
-background-color: rgb(82, 81, 81,0.6);
-z-index: 100;
+  position: absolute;
+  margin:10;
+  bottom:0.6rem;
+  left:3rem;
+  height: 23;
+  width: 23;
+  z-index: 200;
+  fill:rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  transition:1s cubic-bezier(0.16, 1, 0.3, 1) 0s; 
 }
 
-.planetFocus::after
+.infoBoxIcon:hover
 {
-content:"";
-position: absolute;
-bottom:2rem;
-left:-2.40rem;
-height: 2vh;
-width: 2vw;
-background-color: rgb(82, 81, 81,0.6);
-z-index: 100;
+  fill:rgba(255, 255, 255, 0.8);
 }
 
-.IconContainer
+.slideRightinfoBox
 {
-  position:absolute;
-  right: 0;
+  animation: slide-right-infoBox 0.5s cubic-bezier(0.680, -0.550, 0.265, 1.550) forwards;
+}
+
+@keyframes slide-right-infoBox {
+  0% {
+            transform: translateX(-30rem);
+  }
+  100% {
+            transform: translateX(31rem);
+  }
+}
+
+.slideLeftinfoBox
+{
+  animation: slide-left-infoBox 0.5s cubic-bezier(0.680, -0.550, 0.265, 1.550) forwards;
+}
+
+@keyframes slide-left-infoBox {
+  0% {
+            transform: translateX(31rem);
+  }
+  100% {
+            transform: translateX(-30rem);
+  }
+}
+
+.SpaceIcon 
+{
+  position: absolute;
   bottom:0;
+  left:6rem;
+  z-index: 100;
+  cursor: pointer;
+}
+
+.SpaceIcon svg
+{
+  height: 50;
+  width: 50;
+  z-index: 100;
+}
+
+.SpaceIcon:hover .SpaceIcon > svg > circle 
+{
+ fill: gray;
+}
+
+.IconContainer {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
   width: 20vw;
   height: 5vh;
   border-radius: 5px;
@@ -114,28 +108,24 @@ z-index: 100;
   display: flex;
 }
 
-.IconContainer > div
-{
+.IconContainer>div {
 
- padding: 1rem;
+  padding: 1rem;
 }
 
-.IconContainer > div > svg
-{
- height: 2rem;
- cursor: pointer;
-transition: 1s all;
+.IconContainer>div>svg {
+  height: 2rem;
+  cursor: pointer;
+  transition: 1s all;
 }
 
-.IconContainer > div > svg:hover
-{
-transform: scale(1.2);
+.IconContainer>div>svg:hover {
+  transform: scale(1.2);
 }
 
 
 
-.MiniMap
-{
+.MiniMap {
   position: absolute;
   top: 0;
   right: 0;
@@ -154,119 +144,18 @@ transform: scale(1.2);
 }
 
 /*** Contour du canvas **/
-.boxContainer
-{
-
-  position: absolute;
-  top:0;
-  left:0;
+.boxContainer {
   width: 100%;
   height: 100vh;
-  z-index: 1;
-}
-
-.boxTopContainer
-{
-  position: absolute;
-  top:0;
-  left:0;
-  width: 100%;
-  height: 5vh;
-  background-color: rgb(82, 81, 81);
-}
-
-.boxBottomContainer
-{
-  position: absolute;
-  bottom:0;
-  left:0;
-  width: 100%;
-  height: 5vh;
-  background-color: rgb(82, 81, 81);
+  background: rgba(0, 0, 0, 0.2);
 
 }
 
-.boxLeftContainer
-{
-  position: absolute;
-  top:5vh;
-  left:0;
-  width: 2vw;
-  height:90vh;
-  background-color: rgb(82, 81, 81);
-}
-
-.boxLeftContainer::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: -1rem;
-  width: 0;
-  height: 0;
-  border-left: 1rem solid rgb(82, 81, 81);
-  border-bottom: 1rem solid transparent; /* Triangle */
-  z-index: 100;
-}
-
-.boxLeftContainer::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: -1rem;
-  width: 0;
-  height: 0;
-  border-right: 1rem solid transparent;
-  border-bottom: 1rem solid rgb(82, 81, 81); /* Triangle */
-  z-index: 100;
-}
 
 
-.boxRightContainer
-{
-  position: absolute;
-  top:5vh;
-  right:0;
-  width: 2vw;
-  height:90vh;
-  background-color: rgb(82, 81, 81);
-
-}
-
-.boxRightContainer::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -1rem;
-  width: 0;
-  height: 0;
-  border-right: 1rem solid rgb(82, 81, 81);
-  border-bottom: 1rem solid transparent; /* Triangle */
-  z-index: 100;
-}
-
-.boxRightContainer::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: -1rem;
-  width: 0;
-  height: 0;
-  border-left: 1rem solid transparent;
-  border-bottom: 1rem solid rgb(82, 81, 81); /* Triangle */
-  z-index: 100;
-}
 
 
-.boxCenterContainer
-{
-  position: absolute;
-  top:5vh;
-  left:2vw;
-  width: 95vw;
-  height: 90vh;
-}
-
-@media (max-width: 750px) { 
+@media (max-width: 750px) {
 
 
   .infoBox {
@@ -279,19 +168,18 @@ transform: scale(1.2);
     padding: 0.5rem;
     border-radius: 0;
     z-index: 5;
-    transition:1s all;
+    transition: 1s all;
     box-shadow: none;
   }
-  
-  .infoBox p{
-  
-    padding:0.5rem;
+
+  .infoBox p {
+
+    padding: 0.5rem;
   }
 
-  .IconContainer
-{
+  .IconContainer {
 
-  display: none;
+    display: none;
+  }
+
 }
-
- }
