--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@ body {
   font-family: "Kanit", sans-serif;
   background: #f8f9fa;
   color: #333;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
