--- a/styles/display.module.css
+++ b/styles/display.module.css
@@ -157,25 +157,47 @@
 
 @media (max-width: 750px) {
 
-
   .infoBox {
-    position: absolute;
-    top: 0;
+  
+    top: -15rem;
     left: 0;
     width: 100%;
-    background: rgba(255, 255, 255, 0.5);
+    background-color: rgb(255, 255, 255, 0.2);
     color: black;
     padding: 0.5rem;
     border-radius: 0;
-    z-index: 5;
+    border-bottom-left-radius: 12;
+    border-bottom-right-radius: 12;
+    z-index: 100;
     transition: 1s all;
-    box-shadow: none;
+    color: rgb(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    
   }
 
-  .infoBox p {
-
-    padding: 0.5rem;
+  @keyframes slide-right-infoBox {
+    0% {
+              transform: translateY(-15rem);
+    }
+    100% {
+              transform: translateY(15rem);
+    }
   }
+  
+  .slideLeftinfoBox
+  {
+    animation: slide-left-infoBox 0.5s cubic-bezier(0.680, -0.550, 0.265, 1.550) forwards;
+  }
+  
+  @keyframes slide-left-infoBox {
+    0% {
+              transform: translateY(15rem);
+    }
+    100% {
+              transform: translateY(-15rem);
+    }
+  }
+
 
   .IconContainer {
 
