--- a/styles/display.module.css
+++ b/styles/display.module.css
@@ -147,15 +147,65 @@
 .boxContainer {
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 1);
 
 }
 
 
 
 
+@media (min-width: 479px) and (max-width: 959px) {
 
-@media (max-width: 750px) {
+  .infoBox {
+  
+    top: -15rem;
+    left: 0;
+    width: 100%;
+    background-color: rgb(255, 255, 255, 0.2);
+    color: black;
+    padding: 0.5rem;
+    border-radius: 0;
+    border-bottom-left-radius: 12;
+    border-bottom-right-radius: 12;
+    z-index: 100;
+    transition: 1s all;
+    color: rgb(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    
+  }
+
+  @keyframes slide-right-infoBox {
+    0% {
+              transform: translateY(-15rem);
+    }
+    100% {
+              transform: translateY(15rem);
+    }
+  }
+  
+  .slideLeftinfoBox
+  {
+    animation: slide-left-infoBox 0.5s cubic-bezier(0.680, -0.550, 0.265, 1.550) forwards;
+  }
+  
+  @keyframes slide-left-infoBox {
+    0% {
+              transform: translateY(15rem);
+    }
+    100% {
+              transform: translateY(-15rem);
+    }
+  }
+
+
+  .IconContainer {
+
+    display: none;
+  }
+
+}
+
+@media (max-width: 478px) {
 
   .infoBox {
   
