--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -9,6 +9,7 @@
  display: flex;
  flex-direction: row;
  padding-left: 5rem;
+ overflow: hidden;
 }
 
 .navbar:after {
@@ -50,7 +51,48 @@ border-radius: 0 100% 100% 0; /* Forme du quart de rond */
 
 }
 
-@media (max-width: 478px) {
+@media (max-width: 478px) 
+{
 
+
+  .navbar {
+  
+  padding: 0rem;
+
+   border-bottom-left-radius: 0px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   
+   padding-left: 0rem;
+   overflow: hidden;
+   padding-top: 1rem;
+   padding-bottom: 1rem;
+  }
+
+  .navbar ul {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    color: #fff;
+    font-size: 120%;
+    z-index: 5;
+    padding-left: 1rem;
+  }
+
+  .navbar>ul li {
+    padding: 0.5rem;
+   
+  
+  }
+  .logo
+  {
+    padding-left: 1rem;
+    object-fit: contain;
+    width: 40%;
+  }
+  
  
 }
