--- a/styles/planets.module.css
+++ b/styles/planets.module.css
@@ -29,6 +29,7 @@
 }
 
 .content h1 {
+  padding-top: 1rem;
   padding-left:2rem;
   color: #fff;
   font-size: 300%;
@@ -143,7 +144,7 @@ list-style-type: none;
   background-color: rgba(0,0,0,0.5);
   padding: 1rem;
   border:1px solid white;
-  width: 100%;
+  width: 90%;
   min-height: 100%;
   border-top-right-radius: 12;
   border-bottom-right-radius: 12;
@@ -176,7 +177,188 @@ list-style-type: none;
 
 }
 
-@media (max-width: 478px) {
+@media (max-width: 478px) 
+{
 
- 
+  .container {
+    background-color: rgb(46, 46, 45);
+    height: 200vh;
+    width: 100%;
+    z-index: 1;
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+  }
+  
+  
+  .content
+  {
+    height: 200vh;
+    width: 100%;
+    background-image: url("/pictures/banner.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+  
+  }
+  
+  .overlay
+  {
+    width: 100%;
+     height: 200vh;
+    background-color: rgb(0, 0, 0,0.5);
+  }
+  
+  .content h1 {
+    padding-top: 1rem;
+    padding-right: 1rem;
+    padding-left:1rem;
+    font-size: 230%;
+  }
+  
+  .content h2 {
+    padding-left:1rem;
+    color: #fff;
+    font-size: 140%;
+    padding-right: 1rem;
+  }
+  
+  .content h3 {
+    padding-top: 2rem;
+    padding-left:1rem;
+    font-size: 120%;
+    padding-right: 1rem;
+  }
+  
+  .content p {
+    padding-top: 1rem;
+    padding-left:1rem;
+    padding-right: 1rem;
+    color: #fff;
+    font-size: 120%;
+    line-height: 1.9;
+    width: 100%;
+
+  }
+  
+  .content > ul {
+    padding-top: 1rem;
+    padding-left:5rem;
+    color: #fff;
+    font-size: 120%;
+    line-height: 1.9;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 10
+  }
+  
+  .content  ul  li {
+  
+  color: white;
+  padding-top: 0.5rem;
+  padding-left:5rem;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  }
+  
+  
+  .cta {
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+    margin-left: 10rem;
+  }
+  
+  .cta > a {
+    margin: 1rem;
+    margin-left: 10rem;
+    border: 1px solid white;
+    padding: 1rem;
+    transition: 0.5s all;
+    color:white;
+  }
+  
+  .cta>a:hover {
+    background-color: #fff;
+    color: #000;
+  }
+  
+  .planetCarousel
+  {
+    padding: 0rem;
+    display: flex;
+    flex-direction: column;
+    gap:0;
+    justify-content: space-between;
+  }
+  
+  .planetList
+  {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+
+  }
+  
+  .planetList > ul
+  {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap:10;
+  margin-bottom: 2rem;
+  }
+  
+  .planetList > ul > li
+  {
+    width: 40%;
+    padding-top: 0;
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+   margin-bottom: 0.5rem;
+    color:#fff;
+    border: 1px solid white;
+    text-transform: uppercase;
+  }
+  
+  .displayPlanet
+  {
+    background-color: rgba(0,0,0,0.5);
+    padding: 0rem;
+    border:none;
+    width: 100%;
+    min-height: 100%;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  
+  .displayPlanet h2,.displayPlanet ul,.displayPlanet ul li,.displayPlanet p
+  {
+    padding:0;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    width: 100%;
+    padding-right: 1rem;
+  }
+  
+  .displayPlanetContent3D
+  {
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    border-radius: 0;
+  }
 }
