--- a/styles/planets.module.css
+++ b/styles/planets.module.css
@@ -206,7 +206,7 @@ list-style-type: none;
   .overlay
   {
     width: 100%;
-     height: 200vh;
+    height: 200vh;
     background-color: rgb(0, 0, 0,0.5);
   }
   
@@ -220,7 +220,7 @@ list-style-type: none;
   .content h2 {
     padding-left:1rem;
     color: #fff;
-    font-size: 140%;
+    font-size: 180%;
     padding-right: 1rem;
   }
   
@@ -258,7 +258,7 @@ list-style-type: none;
   
   color: white;
   padding-top: 0.5rem;
-  padding-left:5rem;
+  padding-left:1rem;
   color: white;
   display: flex;
   flex-direction: row;
@@ -299,7 +299,7 @@ list-style-type: none;
   width: 100%;
   display: flex;
   flex-direction: row;
-
+padding-top: 2rem;
   }
   
   .planetList > ul
@@ -343,6 +343,7 @@ list-style-type: none;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
+    padding-top: 1;
   }
   
   .displayPlanet h2,.displayPlanet ul,.displayPlanet ul li,.displayPlanet p
@@ -356,8 +357,10 @@ list-style-type: none;
   
   .displayPlanetContent3D
   {
+    padding-top: 2rem;
+
     overflow: hidden;
-    height: 100%;
+    height: 60vh;
     width: 100%;
     border-radius: 0;
   }
