--- a/styles/quizz.module.css
+++ b/styles/quizz.module.css
@@ -1,93 +1,252 @@
 .container {
+  background-color: rgb(46, 46, 45);
+  height: 100vh;
+  width: 100%;
+  z-index: 1;
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
 
-    height: 100vh;
-    width: 100%;
-    position: relative;
-    z-index: 1;
-  }
+.content
+{
+  height: 100vh;
+  width: 100%;
+  background-image: url("/pictures/banner.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
 
+}
+
+.overlay
+{
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(0, 0, 0,0.5);
+}
+
+.content h1 {
+  padding-top: 0rem;
+  padding-left:2rem;
+  color: #fff;
+  font-size: 300%;
+  font-weight: 700;
+  text-shadow: 5px 5px 20px black;
+}
+
+
+.content h2 {
+  padding-left:3rem;
+  color: #fff;
+  font-size: 150%;
+  text-shadow: 5px 5px 20px black;
+}
+
+.content h3 {
+  padding-left:4rem;
+  color: #fff;
+  font-size: 150%;
+  text-shadow: 5px 5px 20px black;
+}
+
+.content p {
+  padding-top: 1rem;
+  padding-left:5rem;
+  color: #fff;
+  font-size: 120%;
+  line-height: 1.9;
+  width: 60%;
+  text-shadow: 1px 1px 10px black;
+}
+
+.level {
+  padding-left:5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.level .inactive {
+  margin-left: 1rem;
+  border: 1px solid white;
+  padding: 1rem;
+  transition: 0.5s all;
+  color:white;
+}
+
+.level .inactive:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+.level .active {
+  border: 1px solid white;
+  margin-left: 1rem;
+  padding: 1rem;
+  transition: 0.5s all;
+  background-color: #fff;
+  color: #000;
   
-  
-  .content
-  {
-    padding: 5rem;
-  }
+}
 
-  .content
-  h1{
-    padding-bottom: 1rem;
-    font-size: 300%;
-  }
-  
-  .content h2
-  {
-    padding-left: 1rem;
-    padding-bottom: 1rem;
-    font-size: 230%;
-  }
-  
-  .content h3
-  {
-    padding-left: 1rem;
-    padding-bottom: 1rem;
-    font-size: 200%;
-  }
+.level .active:hover {
+  border: 1px solid white;
+  color:white;
+}
 
-  .button
-  { 
-    margin: 1rem 1rem 1rem 0;
-    border:1px solid black;
-    padding:0.5rem 1rem 0.5rem 1rem;
-    transition:0.5s all;
-  }
+.cta {
+  padding-left:5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
 
-  .button:hover
-  {
-    background-color: black;
-    color:white
-  }
+.cta > button {
+  margin-left: 1rem;
+  border: 1px solid white;
+  padding: 1rem;
+  transition: 0.5s all;
+  color:white;
+}
+
+
+
+.cta > button:hover {
+  background-color: #fff;
+  color: #000;
+}
 
   @media (max-width: 478px) 
 {
   
   
   
-  .content
-  {
-    padding: 1rem;
+  .container {
+    background-color: rgb(46, 46, 45);
+    min-height: 100vh;
     width: 100%;
-  }
-
-  .content
-  h1{
-    padding-bottom: 0.5rem;
-    font-size: 300%;
+    z-index: 1;
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
   }
   
-  .content h2
-  {
-    padding-left: 1rem;
-    padding-bottom: 1rem;
-    font-size: 230%;
-  }
   
-  .content h3
+  .content
   {
-    padding-left: 1rem;
-    padding-bottom: 1rem;
-    font-size: 200%;
-  }
-  .content p
-  {
-    padding-left: 0.5rem;
-    padding-bottom: 1rem;
+    height: 200vh;
+    width: 100%;
+    background-image: url("/pictures/banner.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
   }
 
-  .button
-  { 
-    width: 100%;
-    margin: 0.5rem 0 0.5rem 0;
-  }
+  .overlay
+{
+  width: 100%;
+  height: 200vh;
+  background-color: rgb(0, 0, 0,0.5);
+}
+
+.content h1 {
+  padding-top: 1rem;
+  padding-left:1rem;
+  font-size: 230%;
+  padding-right: 1rem;
+}
+
+.content h2 {
+  padding-left:1rem;
+  color: #fff;
+  font-size: 140%;
+  padding-right: 1rem;
+}
+
+.content h3 {
+  padding-top: 2rem;
+  padding-left:1rem;
+  font-size: 120%;
+  padding-right: 1rem;
+}
+
+.content p {
+  padding-top: 1rem;
+  padding-left:1rem;
+  padding-right: 1rem;
+  color: #fff;
+  font-size: 120%;
+  line-height: 1.9;
+  width: 100%;
+  text-shadow: 1px 1px 10px black;
+}
+
+.content > ul {
+  padding-top: 2rem;
+  padding-left:1rem;
+  color: #fff;
+  font-size: 120%;
+  line-height: 1.9;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 10
+}
+
+.content  ul  li 
+{
+font-size: 120%;
+padding-top: 0.5rem;
+padding-left:2rem;
+padding-right: 1rem;
+
+}
+
+
+.cta {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 0rem;
+  margin-left: 0rem;
+  padding:1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap:20
+}
+
+.cta > button {
+  width: 100%;
+  margin: 0rem;
+  margin-left: 0rem;
+  border: 1px solid white;
+  padding: 1rem;
+  transition: 0.5s all;
+  color:white;
+}
+
+ 
+.level {
+  padding-left: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-self: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.level .inactive {
+  margin:1rem;
+
+}
+.level .active {
+  margin:1rem; 
+}
 
 
 
