--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -22,6 +22,7 @@
 
 .overlay
 {
+  padding-top: 8vh;
   width: 100%;
   height: 100vh;
   background-color: rgb(0, 0, 0,0.5);
@@ -136,6 +137,7 @@ flex-direction: row;
 
   .overlay
 {
+  padding-top: 30vh;
   width: 100%;
   height: 200vh;
   background-color: rgb(0, 0, 0,0.5);
