--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,6 +1,6 @@
 /** Navbar **/
 .navbar {
-  position:relative ;
+  position:absolute ;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 0.5rem;
@@ -83,3 +83,4 @@
   
  
 }
+
