--- a/styles/planets.module.css
+++ b/styles/planets.module.css
@@ -23,6 +23,7 @@
 
 .overlay
 {
+  padding-top: 8vh;
   width: 100%;
    height: 100vh;
   background-color: rgb(0, 0, 0,0.5);
@@ -205,6 +206,7 @@ list-style-type: none;
   
   .overlay
   {
+    padding-top: 30vh;
     width: 100%;
     height: 200vh;
     background-color: rgb(0, 0, 0,0.5);
