--- a/styles/quizz.module.css
+++ b/styles/quizz.module.css
@@ -22,13 +22,14 @@
 
 .overlay
 {
+  padding-top: 8vh;
   width: 100%;
   height: 100vh;
   background-color: rgb(0, 0, 0,0.5);
 }
 
 .content h1 {
-  padding-top: 0rem;
+  padding-top: 1rem;
   padding-left:2rem;
   color: #fff;
   font-size: 300%;
@@ -59,6 +60,23 @@
   line-height: 1.9;
   width: 60%;
   text-shadow: 1px 1px 10px black;
+}
+
+.controlContainer
+{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap:10
+}
+
+.levelDisplay
+{
+color: #fff;
+font-size: 150%;
+padding: 1rem;
+padding-left: 5rem;
 }
 
 .level {
@@ -123,7 +141,7 @@
   
   .container {
     background-color: rgb(46, 46, 45);
-    min-height: 100vh;
+    min-height: 210vh;
     width: 100%;
     z-index: 1;
     margin:0;
@@ -134,7 +152,7 @@
   
   .content
   {
-    height: 200vh;
+    height: 210vh;
     width: 100%;
     background-image: url("/pictures/banner.webp");
     background-size: cover;
@@ -146,8 +164,9 @@
 
   .overlay
 {
+  padding-top: 30vh;
   width: 100%;
-  height: 200vh;
+  height: 210vh;
   background-color: rgb(0, 0, 0,0.5);
 }
 
@@ -227,6 +246,23 @@ padding-right: 1rem;
   padding: 1rem;
   transition: 0.5s all;
   color:white;
+}
+
+.controlContainer
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap:10
+}
+
+.levelDisplay
+{
+color: #fff;
+font-size: 150%;
+padding: 0rem;
+padding-left: 0rem;
 }
 
  
