--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -114,7 +114,7 @@ flex-direction: row;
 {
   .container {
     background-color: rgb(46, 46, 45);
-    height: 200vh;
+    height: 240vh;
     width: 100%;
     z-index: 1;
     margin:0;
@@ -125,7 +125,7 @@ flex-direction: row;
   
   .content
   {
-    height: 200vh;
+    height: 240vh;
     width: 100%;
     background-image: url("/pictures/banner.webp");
     background-size: cover;
@@ -137,9 +137,9 @@ flex-direction: row;
 
   .overlay
 {
-  padding-top: 30vh;
+  padding-top: 15vh;
   width: 100%;
-  height: 200vh;
+  height: 240vh;
   background-color: rgb(0, 0, 0,0.5);
 }
 
@@ -213,7 +213,8 @@ padding-right: 1rem;
   border: 1px solid white;
   padding: 1rem;
   transition: 0.5s all;
-  color:white;
+  color:black;
+  background-color: #fff;
 }
 
  
