--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,18 +1,26 @@
 /** Navbar **/
 .navbar {
-  position:absolute ;
+  position: absolute;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 0.5rem;
   z-index: 1;
- border-bottom-left-radius: 100px;
- display: flex;
- flex-direction: row;
- padding-left: 5rem;
- overflow: hidden;
+  border-bottom-left-radius: 100px;
+  display: flex;
+  flex-direction: row;
+  padding-left: 5rem;
 }
 
-.navbar ul {
+.desktop {
+  width: 100%;
+
+}
+
+.mobile {
+  display: none;
+}
+
+.desktop ul {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -23,7 +31,7 @@
   z-index: 5;
 }
 
-.navbar>ul li {
+.desktop>ul li {
   padding: 1rem;
   transition: 0.5s all;
   z-index: 6;
@@ -33,54 +41,110 @@
   color: rgba(255, 255, 255, 0.7)
 }
 
-@media (min-width: 479px) and (max-width: 959px) {
+@media (min-width: 479px) and (max-width: 959px) {}
 
-
-}
-
-@media (max-width: 478px) 
-{
-
+@media (max-width: 478px) {
 
   .navbar {
-  
-  padding: 0rem;
+    width: 100%;
+    padding: 1rem;
+    border-bottom-left-radius: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 
-   border-bottom-left-radius: 0px;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   
-   padding-left: 0rem;
-   overflow: hidden;
-   padding-top: 1rem;
-   padding-bottom: 1rem;
   }
 
-  .navbar ul {
-    width: 60%;
+  .desktop 
+  {
+    display: none;
+  }
+
+  .mobile 
+  {
+    position:relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50;
+    height: 50;
+    margin: 10;
+   }
+
+   .toggleOpen
+   {
+    position:absolute;
+    bottom: -30vh;
+    left:0;
+    width:100vw;
+    min-height:30vh;
+    color:white;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    color: #fff;
-    font-size: 120%;
-    z-index: 5;
-    padding-left: 1rem;
-  }
+    padding-left: 2rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 1;
+    transition: 1s all;
+    animation: open 1s linear ;
+   }
+   @keyframes open {
+    from{
+      opacity: 0;
+    }
+    to{
+      opacity: 1;
 
-  .navbar>ul li {
-    padding: 0.5rem;
+    }
+    
+   }
+
+   .toggleClose
+   {
+    position:absolute;
+    bottom: 0vh;
+    left:0;
+    width:100%;
+    min-height:0vh;
+    opacity: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: 1s all;
+    animation: close 1s linear ;
+   }
+
+
+   @keyframes close {
+    from{
+      opacity: 1;
+    }
+    to{
+      opacity: 0;
+
+    }
+    
+   }
+
+   .toggleOpen ul
+   {
+width: 100%;
+   }
+
+   .toggleOpen li
+   {
+    font-size: 140%;
+    padding-bottom: 1rem;
+    width: 100%;
+   }
+
+   .toggleOpen li a
+   {
    
-  
-  }
-  .logo
-  {
-    padding-left: 1rem;
-    object-fit: contain;
-    width: 40%;
-  }
-  
- 
-}
+   }
 
+ 
+  
+
+}
