--- a/styles/planetfocus.module.css
+++ b/styles/planetfocus.module.css
@@ -66,11 +66,11 @@ padding: 1rem;
 .planetFocusIcon
 {
   position: absolute;
-  margin:10;
+  margin:10px;
   bottom:0;
   left:0;
-  height: 30;
-  width: 30;
+  height: 30px;
+  width: 30px;
   z-index: 200;
   fill:rgba(255, 255, 255, 0.5);
   cursor: pointer;
@@ -92,7 +92,7 @@ padding: 1rem;
 @media (max-width: 478px) {
   .planetFocusIcon
   {
-    margin:20;
+    margin:20px;
 
   }
  
