--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -5,7 +5,7 @@
   background-color: rgba(0, 0, 0, 0.7);
   padding: 0.5rem;
   z-index: 1;
-  border-bottom-left-radius: 100px;
+  /* border-bottom-left-radius: 100px; */
   display: flex;
   flex-direction: row;
   align-items: center;
