--- a/styles/quizzMotor.module.css
+++ b/styles/quizzMotor.module.css
@@ -1,60 +1,67 @@
-
-.QuizzMotor
-{
-  border:1px solid black ;
-  padding:1rem;
-  margin-left:5rem;
-  margin-right:5rem;
-  background: rgba(0,0,0,0.5);
+.QuizzMotor {
+  border: 1px solid black;
+  padding: 1rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  background: rgba(0, 0, 0, 0.5);
   min-height: 50vh;
 }
 
 
-.QuizzMotor h2
-{
+.QuizzMotor h2 {
   padding-left: 1rem;
   padding-bottom: 1rem;
   font-size: 230%;
 }
 
-.QuizzMotor h3
-{
+.QuizzMotor h3 {
   padding-left: 1rem;
   padding-bottom: 1rem;
   font-size: 200%;
 }
 
-.QuizzMotor div{
+.QuizzMotor div {
 
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding-left: 1rem;
-  padding-top:0.5rem;
-  padding-bottom:0.5rem;
-  gap:20
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  gap: 20
 }
 
-.QuizzMotor div > input[type='radio']{
-  -webkit-appearance: none; /* Désactive l'apparence par défaut du navigateur */
+
+
+.QuizzMotor div>input[type='radio'] {
+  -webkit-appearance: none;
+  /* Désactive l'apparence par défaut du navigateur */
   -moz-appearance: none;
   appearance: none;
   width: 20px;
   height: 20px;
-  border: 2px solid #4CAF50; /* Couleur et épaisseur du bord */
-  border-radius: 50%; /* Pour garder la forme circulaire du bouton radio */
-  background-color: white; /* Couleur de fond (avant sélection) */
-  position: relative; /* Nécessaire pour positionner l'élément de sélection à l'intérieur */
-  cursor: pointer; /* Curseur pointeur pour l'interaction */
+  border: 2px solid #4CAF50;
+  /* Couleur et épaisseur du bord */
+  border-radius: 50%;
+  /* Pour garder la forme circulaire du bouton radio */
+  background-color: white;
+  /* Couleur de fond (avant sélection) */
+  position: relative;
+  /* Nécessaire pour positionner l'élément de sélection à l'intérieur */
+  cursor: pointer;
+  /* Curseur pointeur pour l'interaction */
   margin-right: 1rem;
 }
-.QuizzMotor div > input[type='radio']:checked {
-  background-color: #4CAF50; /* Fond du bouton radio quand il est sélectionné */
-  border-color: #4CAF50; /* Bordure quand le bouton est sélectionné */
+
+.QuizzMotor div>input[type='radio']:checked {
+  background-color: #4CAF50;
+  /* Fond du bouton radio quand il est sélectionné */
+  border-color: #4CAF50;
+  /* Bordure quand le bouton est sélectionné */
 }
 
-.QuizzMotor div > input[type='radio']:checked::after {
+.QuizzMotor div>input[type='radio']:checked::after {
   content: '';
   position: absolute;
   top: 4px;
@@ -62,114 +69,123 @@
   width: 0px;
   height: 0px;
   border-radius: 50%;
-  background-color: white; /* Le cercle intérieur (pour l'indication de sélection) */
+  background-color: white;
+  /* Le cercle intérieur (pour l'indication de sélection) */
 }
 
-.QuizzMotor div label
-{
-color:white;
-font-size: 120%;
+.QuizzMotor div label {
+  color: white;
+  font-size: 120%;
 }
 
-.QuizzMotor > button {
+.QuizzMotor>button {
   margin: 1rem;
   border: 1px solid white;
   padding: 1rem;
   transition: 0.5s all;
-  color:white;
+  color: white;
 }
 
-.QuizzMotor > button:hover {
+.QuizzMotor>button:hover {
   background-color: #fff;
   color: #000;
 }
 
-.loader
-{
-  margin:1rem;
+.loader {
+  margin: 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center!important;
+  justify-content: center !important;
 }
 
-.QuizzMotor ul
-{
+.QuizzMotor ul {
   padding-left: 1rem;
 }
 
-.QuizzMotor ul li
-{
-display: flex;
-flex-direction: row; 
-color:"#fff"
+.QuizzMotor ul li {
+  display: flex;
+  flex-direction: row;
+  color: "#fff"
 }
 
-.QuizzMotor ul li div
-{
-color:#fff
+.QuizzMotor ul li div {
+  color: #fff
 }
 
-@media (max-width: 478px) 
-{
-  .QuizzMotor
-  {
-    border:1px solid black ;
-    padding:1rem 1rem 1rem 1rem ;
-    width:100%;
+@media (max-width: 478px) {
+  .QuizzMotor {
+    border: 1px solid black;
+    padding: 2rem 1rem 1rem 1rem;
+    width: 100%;
     min-height: 100vh;
+    margin-top: 1rem;
     margin-left: 0;
     margin-right: 0;
   }
-  
-  .QuizzMotor h1{
+
+  .QuizzMotor h1 {
     padding-bottom: 1rem;
     font-size: 300%;
   }
-  
-  .QuizzMotor h2
-  {
+
+  .QuizzMotor h2 {
     padding-bottom: 1rem;
     font-size: 150%;
   }
-  
-  .QuizzMotor h3
-  {
+
+  .QuizzMotor h3 {
 
     padding-bottom: 1rem;
     font-size: 120%;
   }
-  
-  
-  .QuizzMotor > button {
+
+
+  .QuizzMotor>button {
     margin: 0rem;
     margin-top: 1rem;
     width: 100%;
   }
-  
-  .QuizzMotor > button:hover {
+
+  .QuizzMotor>button:hover {
     background-color: #fff;
     color: #000;
   }
-  
-  .QuizzMotor ul
-  {
+
+  .QuizzMotor ul {
     padding-left: 1rem;
   }
-  .QuizzMotor ul li
-  {
-  width: 100%;  
+
+  .QuizzMotor ul li {
+    width: 100%;
   }
 
-  .QuizzMotor ul li div
-  {
- width: 50%;
+  .QuizzMotor ul li div {
+    width: 50%;
   }
 
-  .QuizzMotor div > input[type='radio']{
+  .QuizzMotor div {
+
+    flex-direction: column;
+    padding-left: 0;
+    align-items: flex-start;
+  }
+
+  .QuizzMotor div>input[type='radio'] {
 
     width: 30px;
     height: 30px;
-   
+
+  }
+
+  .QuizzMotor div img {
+    width: 100%;
+  }
+
+  .QuizzMotorQuestion div {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+
   }
 }
